# Code_IT_Team_1_FirstProject

./: .gitignore  README.md  ensemble_wbf.py  interfaces.md  predict.py  pyproject.toml  train.py
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: _send-missed-reviews.yml  ci-pytest.yml  delete-issue-on-project-removal.yml  discord-pr-notify.yml  sync-issue-status.yml
configs/: bbox_corrections.json  class_mapping.json  default.yaml
notebooks/: 00_data_structure.ipynb  01_data_EDA.ipynb  01_data_structure.ipynb  02_aihub_eda.ipynb  02_image_inspection.ipynb  03_colab_train_submit.ipynb  03_colab_train_submit_experiment_ready.ipynb  04_ensemble_submit.ipynb
scripts/: build_synth_dataset.py  setup_wandb_workspace.py  upload_metrics_to_wandb.py
slides/: health-eat-final.html  health-eat-wandb-report.html  index.html
src/data/: dataset.py  mosaic.py  split.py  synth_dataset.py  transforms.py
src/engine/: checkpoint.py  ema.py  evaluate.py  postprocess.py  predict.py  train.py
src/models/: baseline.py
src/submission/: make_submission.py
src/utils/: bbox.py  class_weights.py  collate.py  config.py  validate.py  visualize.py
tests/: check_yolo.py  dummy_model.py  mock_dataset.py  test_baseline.py  test_check_yolo.py  test_dataset.py  test_inference_submission_pipeline.py  test_make_submission.py  test_mosaic.py  test_postprocess.py  test_postprocess_mock.py  test_predict_mock.py  test_validate.py
wandb/: latest-run
wandb/run-20260602_090940-0hhvtr6f/: run-0hhvtr6f.wandb
(+161 files in other folders)
