[project]
name = "code-it-team-1-firstproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "numpy>=1.24.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "ultralytics>=8.4.51",
    "kaggle>=2.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]

[tool.uv]
default-groups = ["dev"]
